--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -75,10 +75,7 @@ logging:
     root: DEBUG
 #Exceptions
 body-check:
-  success: The operation was successful.
-  prefix: 'BODY-CHECK'
-  error:
-    general: There was an unexpected error. Please try again.
+  api: @artifactId@
 #Eureka
 eureka:
   client:
